diverses modificacions dels rols

--- a/client/ui/components/nav.html
+++ b/client/ui/components/nav.html
@@ -15,7 +15,7 @@
           {{#if currentUser}}
           <li><a href="{{pathFor 'home'}}">Posicions</a></li>
           <li><a href="{{pathFor 'test'}}">Test</a></li>
-          <li><a href="{{pathFor 'users'}}">Rols</a></li>
+          <li><a href="{{pathFor 'rols'}}">Rols</a></li>
           {{/if}}
       </ul>
 
