--- a/client/ui/components/nav.html
+++ b/client/ui/components/nav.html
@@ -15,6 +15,7 @@
           {{#if currentUser}}
           <li><a href="{{pathFor 'home'}}">Posicions</a></li>
           <li><a href="{{pathFor 'test'}}">Test</a></li>
+          <li><a href="{{pathFor 'tema'}}">Llistat Temes</a></li>
           <li><a href="{{pathFor 'users'}}">Rols</a></li>
           {{/if}}
       </ul>
