--- a/client/ui/components/nav.html
+++ b/client/ui/components/nav.html
@@ -1,41 +1,34 @@
 <template name="nav">
 
-<<<<<<< HEAD
-  <!-- Top container -->
-  <div class="w3-container w3-top w3-blue w3-large w3-padding" style="z-index:4">
-    <button class="w3-btn w3-hide-large w3-padding-0 w3-hover-text-grey" id="btn-menuOpen"><i class="fa fa-bars"></i>  Menu</button>
-    <ul class="topMenu">
-      <li class="topMenu"><a href="{{pathFor 'home'}}">Posicions</a></li>
-      <li class="topMenu"><a href="{{pathFor 'test'}}">Test</a></li>
-      <li class="topMenu"><a href="{{pathFor 'users'}}">Rols</a></li>
-      <li class="topMenu"><a href="{{pathFor 'imatges'}}">Llistar Imatges</a></li>
-    </ul>
+
+    <!-- Top container -->
+    <div class="w3-container w3-top w3-blue w3-large w3-padding" style="z-index:4">
+        <button class="w3-btn w3-hide-large w3-padding-0 w3-hover-text-grey" id="btn-menuOpen"><i class="fa fa-bars"></i>  Menu</button>
+        <ul class="topMenu">
+            <li class="topMenu"><a href="{{pathFor 'home'}}">Posicions</a></li>
+            <li class="topMenu"><a href="{{pathFor 'test'}}">Test</a></li>
+            <li class="topMenu"><a href="{{pathFor 'users'}}">Rols</a></li>
+            <li class="topMenu"><a href="{{pathFor 'tema'}}">Llistat Temes</a></li>
+            <li class="topMenu"><a href="{{pathFor 'imatges'}}">Llistar Imatges</a></li>
+        </ul>
+    </div>
     <!--<span class="w3-right">RadioSimulator</span>-->
-    <ul class="w3-right">
-=======
+    <ul class="w3-right"></ul>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-          {{#if currentUser}}
-          <li><a href="{{pathFor 'home'}}">Posicions</a></li>
-          <li><a href="{{pathFor 'test'}}">Test</a></li>
-          <li><a href="{{pathFor 'tema'}}">Llistat Temes</a></li>
-          <li><a href="{{pathFor 'rols'}}">Rols</a></li>
-          {{/if}}
-      </ul>
 
-      <ul class="nav navbar-nav navbar-right">
->>>>>>> master
-        <li style="margin-right:150px"><a href="#">{{> loginButtons}}</a></li>
-    </ul>
-  </div>
+        <ul class="nav navbar-nav navbar-right">
 
-  <!-- Sidenav/menu -->
-  <nav class="w3-sidenav w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidenav">
-    {{> menu}}
-  </nav>
-  <!-- Overlay effect when opening sidenav on small screens -->
-  <div class="w3-overlay w3-hide-large w3-animate-opacity" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
+            <li style="margin-right:150px"><a href="#">{{> loginButtons}}</a></li>
+        </ul>
+    </div>
+
+    <!-- Sidenav/menu -->
+    <nav class="w3-sidenav w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidenav">
+        {{> menu}}
+    </nav>
+    <!-- Overlay effect when opening sidenav on small screens -->
+    <div class="w3-overlay w3-hide-large w3-animate-opacity" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
 
 
 </template>
