--- a/client/assets/css/w3Schools.css
+++ b/client/assets/css/w3Schools.css
@@ -344,3 +344,28 @@ input[type=checkbox].w3-check:disabled+.w3-validate,input[type=radio].w3-radio:d
 .w3-border-dark-grey,.w3-hover-border-dark-grey:hover,.w3-border-dark-gray,.w3-hover-border-dark-gray:hover{border-color:#616161!important}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
+
+/*w3-theme-blue*/
+
+.w3-theme-l5 {color:#000 !important; background-color:#f2f9fe !important}
+.w3-theme-l4 {color:#000 !important; background-color:#d2eafd !important}
+.w3-theme-l3 {color:#000 !important; background-color:#a6d4fa !important}
+.w3-theme-l2 {color:#000 !important; background-color:#79bff8 !important}
+.w3-theme-l1 {color:#fff !important; background-color:#4daaf6 !important}
+.w3-theme-d1 {color:#fff !important; background-color:#0c87eb !important}
+.w3-theme-d2 {color:#fff !important; background-color:#0b78d1 !important}
+.w3-theme-d3 {color:#fff !important; background-color:#0a69b7 !important}
+.w3-theme-d4 {color:#fff !important; background-color:#085a9d !important}
+.w3-theme-d5 {color:#fff !important; background-color:#074b83 !important}
+
+.w3-theme-light {color:#000 !important; background-color:#f2f9fe !important}
+.w3-theme-dark {color:#fff !important; background-color:#074b83 !important}
+.w3-theme-action {color:#fff !important; background-color:#074b83 !important}
+
+.w3-theme {color:#fff !important; background-color:#2196f3 !important}
+.w3-text-theme {color:#2196f3 !important}
+.w3-border-theme {border-color:#2196f3 !important}
+
+.w3-hover-theme:hover {color:#fff !important; background-color:#2196f3 !important}
+.w3-hover-text-theme:hover {color:#2196f3 !important}
+.w3-hover-border-theme:hover {border-color:#2196f3 !important}
