--- a/client/assets/css/estilsPropis.css
+++ b/client/assets/css/estilsPropis.css
@@ -1,8 +1,25 @@
 /*Sergey -> Estils aplicats al menú superior*/
-.topMenu {
-  display: inline;
-  margin-left: 20px;
-}
-a{
-  text-decoration: none;
+html,
+body {overflow-x: hidden; /* Prevent scroll on narrow devices */}
+body {padding-top: 70px;}
+footer {padding: 30px 0;}
+
+/*
+ * Off Canvas
+ * --------------------------------------------------
+ */
+@media screen and (max-width: 767px) {
+  .row-offcanvas {
+    position: relative;
+    -webkit-transition: all .25s ease-out;
+         -o-transition: all .25s ease-out;
+            transition: all .25s ease-out;
+  }
+
+  .sidebar-offcanvas {position: absolute; width: 60%; /* 6 columns */display: none;}
+  .row-offcanvas-right {right: 0;}
+  .row-offcanvas-right.active
+  .sidebar-offcanvas {display: block; right: 0;top: 0;z-index: 1;}
+  .row-offcanvas-right.active {}
+
 }
