--- a/imports/ui/components/nav.html
+++ b/imports/ui/components/nav.html
@@ -1,26 +1,20 @@
 <template name="nav">
 
-  <!-- Top container -->
-  <div class="w3-container w3-top w3-blue w3-large w3-padding" style="z-index:4">
-    <button class="w3-btn w3-hide-large w3-padding-0 w3-hover-text-grey" id="btn-menuOpen"><i class="fa fa-bars"></i>  Menu</button>
-    <ul class="topMenu">
-      <li class="topMenu"><a href="{{pathFor 'home'}}">Posicions</a></li>
-      <li class="topMenu"><a href="{{pathFor 'exemplePaginacio'}}">exemplePaginacio</a></li>
-      <li class="topMenu"><a href="{{pathFor 'rols'}}">Rols</a></li>
-      <li class="topMenu"><a href="{{pathFor 'imatges'}}">Llistar Imatges</a></li>
-    </ul>
-    <!--<span class="w3-right">RadioSimulator</span>-->
-    <ul class="w3-right">
-        <li style="margin-right:150px"><a href="#">{{> loginButtons}}</a></li>
-    </ul>
-  </div>
-
-  <!--Sidenav/menu-->
-  <nav class="w3-sidenav w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidenav">
-    {{> menu}}
-  </nav>
-  <!-- Overlay effect when opening sidenav on small screens -->
-  <div class="w3-overlay w3-hide-large w3-animate-opacity" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
-
-
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Projecte Radiografies</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="{{pathFor 'rols'}}">Inici</a></li>
+            <li><a href="{{pathFor 'exemplePaginacio'}}">Exemple paginació</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="right" style="margin-right:150px"><a href="#">{{> loginButtons}}</a></li>
+          </ul>
+        </div><!-- /.nav-collapse -->
 </template>
