--- a/imports/ui/components/nav.html
+++ b/imports/ui/components/nav.html
@@ -1,5 +1,6 @@
 <template name="nav">
-
+  <nav class="navbar navbar-fixed-top navbar-inverse">
+    <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -17,4 +18,6 @@
             <li class="right" style="margin-right:150px"><a href="#">{{> loginButtons}}</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
+      </div>
+    </nav>
 </template>
