Revert "modificar menu"
This reverts commit 19d52f6baa2e75d5aaa095a0512e773a666dfc4a.

--- a/imports/ui/layouts/baseLayout.html
+++ b/imports/ui/layouts/baseLayout.html
@@ -1,21 +1,74 @@
 <template name="baseLayout">
+  <nav class="navbar navbar-fixed-top navbar-inverse">
+    <div class="container-fluid">
+      {{> nav}}
+    </div>
+  </nav>
 
-   {{> nav}}
-
+{{#if isInRole 'admin'}}
   <div class="container-fluid">
-
-    {{> offcanvasButton}}
-
-    <div class="row">
-
-      {{> sidebar}}
-
-      <div class="col-md-9">
-
+    <div class="row row-offcanvas row-offcanvas-right">
+      <div class="col-xs-12 col-sm-9 col-sm-push-3">
+        <button type="button" class="pull-left btn btn-default visible-xs" id="toggle"  data-toggle="offcanvas" aria-expanded="false" aria-controls="navbar">
+          <i class="fa fa-navicon"></i>
+        </button>
         {{> yield}}
+       </div><!--/.col-xs-12.col-sm-9-->
 
-      </div>
+       <div class="col-xs-6 col-sm-3 col-sm-pull-9 sidebar-offcanvas" id="sidebar">
+         <div class="list-group">
+           <a href="#" class="list-group-item active">Menú Admin</a>
+           <a href="#" class="list-group-item">Alta Usuaris</a>
+           <a href="#" class="list-group-item">Llistar Usuaris</a>
+         </div>
+       </div><!--/.sidebar-offcanvas-->
     </div>
   </div>
+{{/if}}
 
+{{#if isInRole 'professor'}}
+  <div class="container-fluid">
+    <div class="row row-offcanvas row-offcanvas-right">
+      <div class="col-xs-12 col-sm-9 col-sm-push-3">
+        <button type="button" class="pull-left btn btn-default visible-xs" id="toggle" data-toggle="offcanvas" aria-expanded="false" aria-controls="navbar">
+          <i class="fa fa-navicon"></i>
+        </button>
+        {{> yield}}
+       </div><!--/.col-xs-12.col-sm-9-->
+
+       <div class="col-xs-6 col-sm-3 col-sm-pull-9 sidebar-offcanvas" id="sidebar">
+         <div class="list-group">
+           <a href="#" class="list-group-item active">Menú Profe</a>
+           <a href="#" class="list-group-item">Alta Alumnes</a>
+           <a href="#" class="list-group-item">Llistat Alumnes</a>
+           <a href="#" class="list-group-item">Temes</a>
+           <a href="#" class="list-group-item">Gestió Grup</a>
+         </div>
+       </div><!--/.sidebar-offcanvas-->
+    </div>
+  </div>
+{{/if}}
+
+{{#if isInRole 'alumne'}}
+  <div class="container-fluid">
+    <div class="row row-offcanvas row-offcanvas-right">
+      <div class="col-xs-12 col-sm-9 col-sm-push-3">
+        <button type="button" class="pull-left btn btn-default visible-xs" id="toggle" data-toggle="offcanvas" aria-expanded="false" aria-controls="navbar">
+          <i class="fa fa-navicon"></i>
+        </button>
+        {{> yield}}
+       </div><!--/.col-xs-12.col-sm-9-->
+
+       <div class="col-xs-6 col-sm-3 col-sm-pull-9 sidebar-offcanvas" id="sidebar">
+         <div class="list-group">
+           <a href="#" class="list-group-item active">Menú Alumne</a>
+           <a href="#" class="list-group-item">Activitats no avaluables</a>
+           <a href="#" class="list-group-item">Temes</a>
+           <a href="#" class="list-group-item">Gestó</a>
+           <a href="#" class="list-group-item">Exàmen</a>
+         </div>
+       </div><!--/.sidebar-offcanvas-->
+    </div>
+  </div>
+{{/if}}
 </template>
