--- a/imports/ui/components/nav.html
+++ b/imports/ui/components/nav.html
@@ -14,7 +14,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{{pathFor 'rols'}}">Inici</a></li>
             <li><a href="{{pathFor 'exemplePaginacio'}}">Exemple paginació</a></li>
-            <li><a href="{{pathFor 'grups'}}">Temes</a></li>
+            <li><a href="{{pathFor 'grups'}}">Grups</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="right" style="margin-right:150px"><a href="#">{{> loginButtons}}</a></li>
           </ul>
