--- a/imports/ui/components/nav.html
+++ b/imports/ui/components/nav.html
@@ -15,6 +15,7 @@
             <li class="active"><a href="{{pathFor 'rols'}}">Inici</a></li>
             <li><a href="{{pathFor 'exemplePaginacio'}}">Exemple paginació</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="{{pathFor 'llico'}}">Lliçons</a></li>
             <li class="right" style="margin-right:150px"><a href="#">{{> loginButtons}}</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
