CRUD Usuaris Sergey

--- a/imports/ui/components/sidebar.html
+++ b/imports/ui/components/sidebar.html
@@ -4,8 +4,8 @@
       <a href="#" class="list-group-item active">Menú Admin</a>
       <a href="#" class="list-group-item">Alta Usuaris</a>
       <a href="{{pathFor 'usuaris'}}" class="list-group-item">Llistar Usuaris</a>
-      <a href="{{pathFor 'temes'}}">Temes</a>
-    
+      <a href="{{pathFor 'temes'}}" class="list-group-item">Temes</a>
+
     </div>
   </div><!--/.sidebar-offcanvas-->
 </template>
