organització de grups i temes

--- a/imports/ui/components/nav.html
+++ b/imports/ui/components/nav.html
@@ -13,7 +13,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{{pathFor 'rols'}}">Inici</a></li>
             <li><a href="{{pathFor 'exemplePaginacio'}}">Exemple paginació</a></li>
-            <li><a href="{{pathFor 'temes'}}">TemesToni</a></li>
+            <li><a href="{{pathFor 'temes'}}">Temes</a></li>
             <li><a href="{{pathFor 'llicons'}}">Lliçons</a></li>
             <li><a href="#contact">Contact</a></li>
               <li><a href="{{pathFor 'grups'}}">Grups</a></li>
