Revert "Merge remote-tracking branch 'refs/remotes/origin/master'"
This reverts commit 70c73b96cc0fd118e3029ff06b41442c3199def2.

--- a/imports/ui/components/menu.html
+++ b/imports/ui/components/menu.html
@@ -24,8 +24,8 @@ Funció: Pàgina amb 3 condicionals, en funció del rol del usuari mostrarem el 
         <div class="modal-content">
           <div class="list-group">
             <a href="#" class="list-group-item active">Menú Profe</a>
-            <a href="" class="list-group-item">Alta Alumnes</a>
-            <a href="{{pathFor 'temes'}}" class="list-group-item">Llistat Alumnes</a>
+            <a href="#" class="list-group-item">Alta Alumnes</a>
+            <a href="#" class="list-group-item">Llistat Alumnes</a>
             <a href="#" class="list-group-item">Temes</a>
             <a href="#" class="list-group-item">Gestió Grup</a>
           </div>
