--- a/imports/ui/components/sidebar.html
+++ b/imports/ui/components/sidebar.html
@@ -3,7 +3,9 @@
     <div class="list-group">
       <a href="#" class="list-group-item active">Menú Admin</a>
       <a href="#" class="list-group-item">Alta Usuaris</a>
-      <a href="#" class="list-group-item">Llistar Usuaris</a>
+      <a href="{{pathFor 'usuaris'}}" class="list-group-item">Llistar Usuaris</a>
+      <a href="{{pathFor 'temes'}}" class="list-group-item">Temes</a>
+
     </div>
   </div><!--/.sidebar-offcanvas-->
 </template>
