--- a/imports/ui/components/nav.html
+++ b/imports/ui/components/nav.html
@@ -15,6 +15,7 @@
             <li><a href="{{pathFor 'exemplePaginacio'}}">Exemple paginació</a></li>
             <li><a href="{{pathFor 'temes'}}">Temes</a></li>
             <li><a href="{{pathFor 'llicons'}}">Lliçons</a></li>
+			<li><a href="{{pathFor 'curs'}}">Curs</a></li>
             <li><a href="#contact">Contact</a></li>
               <li><a href="{{pathFor 'grups'}}">Grups</a></li>
             <li class="right" style="margin-right:150px"><a href="#">{{> loginButtons}}</a></li>
