--- a/imports/ui/components/side.html
+++ b/imports/ui/components/side.html
@@ -29,13 +29,19 @@
                         </ul>
                     </li>
                       <li>
-                          <a href="#">Administració Lliçons<span class="fa arrow"></span></a>
+                          <a href="#">Administració Entitats<span class="fa arrow"></span></a>
                           <ul class="nav nav-third-level">
                               <li>
                                 <a href="{{pathFor 'temes'}}" class="list-group-item">Temes</a>
                               </li>
                               <li>
                                 <a href="{{pathFor 'llicons'}}" class="list-group-item">Lliçons</a>
+                              </li>
+                              <li>
+                                <a href="{{pathFor 'curs'}}" class="list-group-item">Curs</a>
+                              </li>
+                              <li>
+                                <a href="{{pathFor 'grups'}}" class="list-group-item">Grups</a>
                               </li>
                               <li>
                                   <a href="#">Preguntes</a>
